# Effective_and_Modern_Cpp_assignments

./: .gitignore  README.txt
Ex01_CopyMove/Matrix/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  matrix_with_label.cpp
Ex02_SmartPointers/: Box.h  CMakeLists.txt  DynamicContainer.h  Ex1_StaticContainer.cpp  Ex2_StaticContainer2.cpp  Ex4_String.cpp  MyString.h  String.cpp  String.h
Ex02_SmartPointers/Google_tests/: CMakeLists.txt
Ex02_SmartPointers/Google_tests/String_tests/: CMakeLists.txt  String_Test.cpp
Ex02_SmartPointers/impl/: CMakeLists.txt  Ex4_String.cpp  MyString.h  StaticContainer.h  StaticContainer2.h  String.cpp  String_my.h
Ex03_FunctionalObjects/: CMakeLists.txt
Ex03_FunctionalObjects/FunctionPointers/: function_pointers.cpp
Ex03_FunctionalObjects/LambdaExpressions/: lambda_expressions.cpp
Ex03_FunctionalObjects/Printer/: Printer.cpp  myFile.txt
Ex04_FunctionTemplates/: CMakeLists.txt  Templates.h  Templates_EX1.tpp  Templates_EX2.tpp  Templates_EX3.tpp  ex_4_1_templates.cpp  ex_4_2_compare.cpp  ex_4_3_selectIf.cpp
Ex05_ClassTemplates/: CMakeLists.txt  dynamicVector.h  ex1_Pair.cpp  ex2_staticVector.cpp  ex3_dynamicVector.cpp  ex4_conversion.cpp  staticVector.h
Ex06_VariadicTemplate/: CMakeLists.txt  ex1_variadicFunctions.cpp  ex3_Mixins.cpp  ex4_MultiVector.cpp  proxy.cpp
Ex06_VariadicTemplate/Solutions/: Functions.h  Mixins.h  MultiVector.h  Proxy.h
Ex07_Traits&Policies/: CMakeLists.txt  Vector.h  ex_7_1_type_traits.cpp  ex_7_2_Vector_traits.cpp  ex_7_3_Vector_policies.cpp  ex_7_4_Vector_operators.cpp
Ex07_Traits&Policies/Solutions/: Nodes.h  Vector.h  VectorModule.cpp  vector_policies.h  vector_traits.h
Ex08_Iterators/: CMakeLists.txt  ex_8_1_Range.cpp  ex_8_2_MatrixModifiers.cpp  ex_8_3_MatrixIterator.cpp  ex_8_4_Filter.cpp
Ex08_Iterators/Solutions/: Filter.h  Matrix.h  Range.h
Ex09_STL/: CMakeLists.txt  ex_9_1_stdalgorithms.cpp  ex_9_2_words.cpp  ex_9_3_Trie.cpp
Ex09_STL/Solution/: Anagram.h  Trie.cpp  Trie.h  WordCount.h  countWords.cpp
Ex10_SFINAE/: CMakeLists.txt  ex_10_1.cpp  ex_10_2_tag_dispaching.cpp  ex_10_3_chrono.cpp
Ex10_SFINAE/Solution/: Ex1.h  Ex2.h  Ex3_Timer.h  Timer.cpp  Times.cpp
Ex11_Concepts_Filesystem_Regex/: CMakeLists.txt  concepts.cpp  literals.cpp  paths.cpp
Ex11_Concepts_Filesystem_Regex/Solutions/: ConceptsContainer.h  FileSystem.h  Literals.h  cos.changed
Ex12_Threads/: CMakeLists.txt  random.cpp
Ex12_Threads/mandelbrot/: ex_11_2_Mandelbrot.cpp
Ex13_Metaprogramming/: CMakeLists.txt  constinit.cpp  ex1_KlasyRekurencyjne.cpp  ex3_IntegerList.cpp
Ex13_Metaprogramming/Solutions/: Binomial.h  IntegerList.h  PascalsTriangle.h  Power.h
Ex14_Modules/: CMakeLists.txt
Ex14_Modules/Solutions/: vector.cppm  vector_policies.cppm  vector_traits.cppm
